--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 id="Hiding1">DING DING DESSERT MIX & MUCH </h1>
             <img src="img/malop (4).png"class="logomenu" width="250"/>
             <link rel="stylesheet" href="coba.css">
-            <p id="phome">MALOP DESSERT merupakan bisnis kuliner yang menghadirkan pilihan makanan ringan untuk konsumen. Pudding adalah hidangan penutup dengan berbagai varian rasa, sementara dipadukan dengan camilan lain atau topping lain seperti keju, coco crunch, coklat, coco chips, bahkan terdapat varian spesial dengan buah. </p>
+            <p id="phome">DING DING DESSERT merupakan bisnis kuliner yang menghadirkan pilihan makanan ringan untuk konsumen. Pudding adalah hidangan penutup dengan berbagai varian rasa, sementara dipadukan dengan camilan lain atau topping lain seperti keju, coco crunch, coklat, coco chips, bahkan terdapat varian spesial dengan buah. </p>
         </div>
         <nav id="navi">
             <ul>
