--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
             </article>
             <article id="produk" class="card">
                 <h2>Menu</h2>
-                <img src="img/g5.jpg"
-                class="gambar-artikel" width="200"/>
+                <center>
+                    <img src="img/1.png"
+                    class="" width="70%"/>
+                </center>
                 <p id="pmenu">Menu yang tersedia dalam ding ding dessert dapat dilihat pada daftar menu dibawah ini:</p>
                 <table id="tmenu" border="1px" cellspacing="0" cellpadding="10px"> 
                     <thead>
